--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.30.10",
@@ -43,5 +44,9 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.36.2"
-  }
+  },
+  "trustedDependencies": [
+    "@clerk/shared",
+    "es5-ext"
+  ]
 }
